--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,7 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],"compilerOptions": {
+    "module": "ESNext","target": "ESNext","moduleResolution": "node","jsx": "react-jsx"
+  }
 }
